# rust-complete-guide

./: README.md
01-word-counter/: main.rs
02-imgtool/: Cargo.toml
03-logic-gates/src/: lib.rs
03-logic-gates/tests/: half_adder.rs
04-complex/src/: lib.rs
05-todolist-parser/src/: error.rs  lib.rs
06-custom_iterator/: main
06-custom_iterator/src/: main.rs
07-actor_demo/: Cargo.toml
07-actor_demo/src/: main.rs
08-macro_map/src/: lib.rs
09-http_tester/: Cargo.toml
09-http_tester/src/: lib.rs
10-into_map_demo/: Cargo.toml
10-into_map_demo/into_map_derive/: Cargo.toml
10-into_map_demo/into_map_derive/src/: lib.rs
11-c_from_rust/: Cargo.toml  build.rs  mystrlen.c
11-c_from_rust/src/: main.rs
12-rust_from_c/: Cargo.toml  Makefile  main  main.c
12-rust_from_c/src/: lib.rs
13-edit_distance/: Cargo.toml  build.rs
13-edit_distance/examples/: basic.rs
13-edit_distance/lib/: levenshtein.h
13-edit_distance/src/: bindings.rs  lib.rs
14-word_suffix/: .gitignore  Cargo.toml  main.py
14-word_suffix/src/: lib.rs
15-native_counter/: main.js  package.json
15-native_counter/lib/: index.js
15-native_counter/native/: Cargo.toml
15-native_counter/native/src/: lib.rs
16-env_logger_demo/: Cargo.toml
16-env_logger_demo/src/: main.rs
16-env_logger_demo/user_auth/: Cargo.toml
17-log4rs_demo/: Cargo.toml
17-log4rs_demo/config/: log4rs.yaml
18-slog_demo/: Cargo.toml
18-slog_demo/src/: enemy.rs  (+3 more)
19-rudis_sync/: Cargo.toml
20-rudis_async/: Cargo.toml
21-hyperurl/: Cargo.toml
22-shorten/: Cargo.toml
23-linksnap/: Cargo.toml
(+13 files in other folders)
